--- a/portfolio-covid19.html
+++ b/portfolio-covid19.html
@@ -63,10 +63,10 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Business Analysis</li>
+            <li class="current">Portfolio Details</li>
           </ol>
         </nav>
-        <h1>Coffee Shop--EDA</h1>
+        <h1>Visualization</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -98,15 +98,19 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/cofee shop1.jpg" alt="">
+              <img src="assets/img/portfolio/app-1.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Supermarket.jpg" alt="">
+              <img src="assets/img/portfolio/product-1.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Car sales.jpg" alt="">
+              <img src="assets/img/portfolio/branding-1.jpg" alt="">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="assets/img/portfolio/books-1.jpg" alt="">
             </div>
 
           </div>
@@ -155,8 +159,8 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>Business Analysis</li>
-                <li><strong>Source</strong>Github</li>
+                <li><strong>Category</strong>Visualization</li>
+                <li><strong>Source</strong> Tableau</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
                 <li><a href="https://public.tableau.com/shared/4ZYZHPHFG?:display_count=n&:origin=viz_share_link" class="btn-visit align-self-start">View Project</a></li>
               </ul>
