--- a/portfolio-covid19.html
+++ b/portfolio-covid19.html
@@ -98,19 +98,15 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/app-1.jpg" alt="">
+              <img src="assets/assets/img/masonry-portfolio/corona virus.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/product-1.jpg" alt="">
+              <img src="assets/assets/img/masonry-portfolio/Bike rent.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/portfolio/branding-1.jpg" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/portfolio/books-1.jpg" alt="">
+              <img src="assets/assets/img/masonry-portfolio/Retail sales.jpg" alt="">
             </div>
 
           </div>
