--- a/portfolio-covid19.html
+++ b/portfolio-covid19.html
@@ -102,7 +102,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/assets/img/masonry-portfolio/Bike rent.jpg" alt="">
+              <img src="assets/assets/img/masonry-portfolio/sales-db.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
@@ -174,13 +174,13 @@
   <footer id="footer" class="footer position-relative light-background">
     <div class="container">
       <h3 class="sitename">Arief Prasetyo Hadi</h3>
-      <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
+      <p>Thank you for looking at my site, for the latest information please follow my social media accounts.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-skype"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/arief-prasetyo-hadii"><i class="bi bi-linkedin"></i></a>
+        <a href="https://github.com/ariefprasetyohadi"><i class="bi bi-github"></i></a>
+        <a href="https://www.kaggle.com/ariefprasetyohadi"><i class="fab fa-kaggle"></i></a>
+        <a href="https://ariefprasetyohadi.medium.com"><i class="bi bi-medium"></i></a>
+        <a href="mailto:riefprasetyoh@gmail.com"><i class="bi bi-envelope-fill"></i></a>
       </div>
       <div class="container">
         <div class="copyright">
