--- a/portfolio-covid19.html
+++ b/portfolio-covid19.html
@@ -65,10 +65,10 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Portfolio Details</li>
+            <li class="current">Visualization</li>
           </ol>
         </nav>
-        <h1>Visualization</h1>
+        <h1>Covid-19 Spread Dashboard--Tableau</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -103,6 +103,10 @@
               <img src="assets/assets/img/masonry-portfolio/corona virus.jpg" alt="">
             </div>
 
+                        <div class="swiper-slide">
+              <img src="assets/img/masonry-portfolio/seattle weather.png" alt="">
+            </div>
+
             <div class="swiper-slide">
               <img src="assets/assets/img/masonry-portfolio/sales-db.jpg" alt="">
             </div>
@@ -132,7 +136,6 @@
                   <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                
               </div>
             </div>
           </div>
