--- a/portfolio-covid19.html
+++ b/portfolio-covid19.html
@@ -68,7 +68,7 @@
             <li class="current">Visualization</li>
           </ol>
         </nav>
-        <h1>Covid-19 Spread Dashboard--Tableau</h1>
+        <h1>Covid-19 Spread Dasboard--Tableau</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -100,19 +100,19 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/assets/img/masonry-portfolio/corona virus.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/corona virus.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-            <img src="assets/img/masonry-portfolio/seattle weather.png" alt="">
+              <img src="assets/img/masonry-portfolio/seattle weather.png" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/assets/img/masonry-portfolio/sales-db.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Retail sales.jpg" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/assets/img/masonry-portfolio/Retail sales.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/sales-db.jpg" alt="">
             </div>
 
           </div>
@@ -127,8 +127,9 @@
             <div class="portfolio-description">
               <h2>About this project</h2>
               <p>
-                This project is a dashboard that displays data on the spread of covid 19 in Indonesia in the period 2020 to 2022. Data displayed from daily cases of infected patients, recovered patients and dead patients. The data is complemented by the demographics of the location of the spread of covid 19.
+                This project contains reports and forecasts of weather in Seattle, Washington from 2012 to 2015. The focus of this project is to see how often the intensity of weather changes that occur every year. Which can be seen in the bar charts and pie charts that visualize some of the following weather: sunny, foggy, drizzly, rainy, and snowy weather.
               </p>
+
 
               <div class="testimonial-item">
                 <p>
@@ -144,6 +145,9 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
+                <li><strong>Category</strong>Visualization</li>
+                <li><strong>Source</strong> Google Looker Studio</li>
+                <li><strong>Project date</strong> 05 January, 2024</li>
                 <li><strong>Category</strong>Visualization</li>
                 <li><strong>Source</strong> Tableau</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
